# backend-axum-template

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  diesel.toml  docker-compose.yaml
migrations/: 20260620194012_create_users.up.sql
migrations/2026-06-18-090434-0000_create_users/: up.sql
src/: config.rs  docs.rs  initiator.rs  main.rs
src/internal/: mod.rs
src/internal/constant/: dto.rs  errors.rs  mod.rs
src/internal/constant/model/: user.rs
src/internal/handler/: mod.rs
src/internal/handler/middleware/: middleware.rs  mod.rs
src/internal/handler/user_handler/: handler.rs  mod.rs
src/internal/module/: mod.rs
src/internal/module/user_service/: mod.rs
src/internal/platform/: logger.rs
src/internal/routes/: mod.rs
src/internal/routes/user_routes/: mod.rs  routes.rs
src/internal/storage/: mod.rs
src/internal/storage/user_storage/: mod.rs
