[package]
name = "backend-axum-template"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Axum Web Ecosystem ---
axum = "0.8"                    # Core web framework
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "net"] } # Async runtime
tower-http = { version = "0.6", features = ["trace", "cors"] } # Request tracing middleware

# --- Configuration & Environment (Viper Replacements) ---
serde = { version = "1.0", features = ["derive"] } # Engine to serialize/deserialize structs
envy = "0.4"                    # Loads environment variables straight into Serde structs
dotenvy = "0.15"                # Utility to read local .env files automatically during startup

# --- Structured Logging & Telemetry (Uber Zap Replacement) ---
tracing = "0.1"                 # Core logging macros (info!, error!, warn!, etc.)
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] } # Formats logs into structured JSON

# --- Database & Asynchronous ORM Layer (Sqlc Replacement) ---
diesel = { version = "2.2", features = ["postgres", "chrono", "uuid"] } # Query builder & Type safety engine
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }      # Async extensions for Diesel using BB8 connection pooling

# --- Data Types & Utilities ---
chrono = { version = "0.4", features = ["serde"] } # Time parsing mapped directly to Postgres/Serde
uuid = { version = "1.11", features = ["v4", "serde"] } # ID generation mapped directly to Postgres/Serde
thiserror = "2.0"               # Idiomatic crate to generate typed, structural application domain errors
futures-util = { version = "0.3", features = ["futures-macro"] }  # diesel-async needs this for try_join!
async-trait = "0.1"            # Async trait support for database repository traits
tower = "0.5.3"
colored = "3.1.1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
axum-governor = "2.0.2"
